# rust-kzg-bn254

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain  rustfmt.toml
.github/workflows/: converage.yml  crates-release-prod.yml  enhanced-testing.yml  rust.yml
batch/: Cargo.toml
batch/src/: batch.rs
batch/tests/: batch_tests.rs
benches/: bench_g1_ifft.rs  bench_helpers.rs  bench_kzg_commit.rs  bench_kzg_commit_large_blobs.rs  bench_kzg_commit_with_cache.rs  bench_kzg_ifft_cache.rs  bench_kzg_proof.rs  bench_kzg_setup.rs  bench_kzg_verify.rs
kzg/: Cargo.toml
kzg/benches/: bench_g1_ifft.rs  bench_kzg_commit_large_blobs.rs  bench_kzg_setup.rs
kzg/src/: kzg.rs  lib.rs  srs.rs  verify.rs
kzg/tests/: kzg_test.rs
kzg/tests/test-files/: srs.g1.points.string
primitives/: Cargo.toml  README.md
primitives/src/: arith.rs  blob.rs  consts.rs  errors.rs  helpers.rs  lib.rs  polynomial.rs  traits.rs
primitives/tests/: blob_test.rs  compute_challenge_test.rs  helpers_test.rs  polynomial_test.rs
prover/: Cargo.toml  README.md
prover/benches/: bench_g1_ifft.rs  bench_kzg_commit.rs  bench_kzg_commit_large_blobs.rs  bench_kzg_proof.rs  bench_kzg_setup.rs
prover/src/: kzg.rs  lib.rs  srs.rs
prover/tests/: kzg_test.rs  parallel_read_g1_test.rs
src/: arith.rs  batch.rs  batch_verification.rs  blob.rs  consts.rs  errors.rs  helpers.rs  kzg.rs  kzg_new.rs  lib.rs  new_helpers.rs  polynomial.rs  srs.g1.16  srs.g2.16  srs.rs  traits.rs  verification.rs  verify.rs
src/test-files/: blobs-from-fr.txt  blobs.txt  g1_serialized_test  g2_serialized_mainnet  g2_serialized_test  kzg.proof.eq.input  srs.g2.points.string
tests/: blob_test.rs  error_tests.rs  helpers_test.rs  kzg_test.rs  polynomial_test.rs
tests/test-files/: g2.powerOf2.string.txt  lagrangeG1SRS.txt
verifier/: Cargo.toml  README.md
verifier/benches/: bench_kzg_verify.rs
verifier/src/: batch.rs  lib.rs  verify.rs
verifier/tests/: tests.rs
