[workspace]
members = [
    "batch",
    "kzg", "primitives",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0.10"

[profile.bench]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.test]
opt-level = 3
debug = true
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false