[workspace]
members = [
    "batch",
    "kzg", "primitives",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0.11"

[workspace.package]
edition = "2021"
rust-version = "1.81"
repository = "https://github.com/Layr-Labs/rust-kzg-bn254"
homepage = ""
license-file = "LICENSE"

[profile.bench]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.test]
opt-level = 3
debug = true
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

