[workspace.package]
edition = "2021"
rust-version = "1.78"
repository = "https://github.com/Layr-Labs/rust-kzg-bn254"
homepage = ""
license-file = "LICENSE"

[workspace]
members = ["verifier", "prover", "primitives"]
resolver = "2"

[profile.bench]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.test]
opt-level = 3
debug = true
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[workspace.dependencies]
rust-kzg-bn254-primitives = { version = "0.1.1", path = "./primitives" }
rust-kzg-bn254-prover = { version = "0.1.1", path = "./prover" }
rust-kzg-bn254-verifier = { version = "0.1.1", path = "./verifier" }

thiserror = { version = "2.0.11", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
num-traits = { version = "0.2", default-features = false }
libm = "0.2.13"

ark-bn254 = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
