[package]
name = "rust-kzg-bn254-primitives"
version = "0.1.3"
description = "This library offers a set of structs, traits and functions for generating Blobs and Polynomials which are used to interact with rust-kzg-bn254-prover and rust-kzg-bn254-verifier crates."
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ark-bn254 = { workspace = true, features = ["curve"] }
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
ark-poly.workspace = true
sha2.workspace = true
num-traits.workspace = true
thiserror.workspace = true
libm.workspace = true

# serde_derive is no_std https://crates.io/crates/serde_derive
# alloc is also no_std https://serde.rs/no-std.html#memory-allocation
serde = { workspace = true, features = ["derive", "alloc"] }

[dev-dependencies]
rand = "0.8.5"
rayon = "1.10.0"

[[test]]
name = "blob"
path = "tests/blob_test.rs"

[[test]]
name = "polynomial"
path = "tests/polynomial_test.rs"

[[test]]
name = "helpers"
path = "tests/helpers_test.rs"
