[package]
name = "rust-kzg-bn254-prover"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
description = "This library offers a set of functions for generating and interacting with bn254 KZG commitments and proofs in rust, with the motivation of supporting fraud and validity proof logic in EigenDA rollup integrations."
readme = "README.md"
repository.workspace = true
license-file.workspace = true
exclude = ["tests/*", "benches/*"]

[dependencies]
rust-kzg-bn254-primitives.workspace = true

ark-bn254.workspace = true
ark-ec = { workspace = true, features = ["parallel"] }
ark-ff = { workspace = true, features = ["parallel"] }
ark-std = { workspace = true, features = ["parallel"] }
ark-poly = { workspace = true, features = ["parallel"] }

num-traits.workspace = true

# We keep these here instead of in Cargo.toml because (I think?) they require std
rayon = "1.10"
crossbeam-channel = "0.5.15"
num_cpus = "1.16.0"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"
lazy_static = "1.5.0"

[[test]]
name = "kzg"
path = "tests/kzg_test.rs"

[[bench]]
name = "bench_g1_ifft"
harness = false
path = "benches/bench_g1_ifft.rs"

[[bench]]
name = "bench_kzg_setup"
harness = false
path = "benches/bench_kzg_setup.rs"

[[bench]]
name = "bench_kzg_commit"
harness = false
path = "benches/bench_kzg_commit.rs"

[[bench]]
name = "bench_kzg_commit_large_blobs"
harness = false
path = "benches/bench_kzg_commit_large_blobs.rs"

[[bench]]
name = "bench_kzg_proof"
harness = false
path = "benches/bench_kzg_proof.rs"
