[package]
name = "rust-kzg-bn254-verifier"
version = "0.1.1"
description = "This library offers a set of functions for verifying KZG commitments and proofs in bn254, with the motivation of supporting fraud and validity proof logic in EigenDA rollup integrations."
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
rust-kzg-bn254-primitives = {version = "0.1.1", path = "../primitives" }
ark-bn254 = "0.5.0"
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-serialize = "0.5.0"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5"
lazy_static = "1.5"
ark-std = { version = "0.5.0", features = ["parallel"] }
rust-kzg-bn254-prover = { version = "0.1.0", path = "../prover" }

[[bench]]
name = "bench_kzg_verify"
harness = false
path = "benches/bench_kzg_verify.rs"
