[package]
name = "rust-kzg-bn254-verifier"
version = "0.1.1"
description = "This library offers a set of functions for verifying KZG commitments and proofs in bn254, with the motivation of supporting fraud and validity proof logic in EigenDA rollup integrations."
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
rust-kzg-bn254-primitives.workspace = true

ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5"
lazy_static = "1.5"
ark-std = { workspace = true, features = ["parallel"] }
rust-kzg-bn254-prover.workspace = true

[[bench]]
name = "bench_kzg_verify"
harness = false
path = "benches/bench_kzg_verify.rs"
